--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "match-sorter": "2.3.0",
     "netlify-auth-providers": "1.0.0-alpha5",
     "prop-types": "15.6.2",
-    "react": "16.7.0-alpha.2",
+    "react": "^16.8.1",
     "react-cache": "2.0.0-alpha.1",
-    "react-dom": "16.7.0-alpha.2",
+    "react-dom": "^16.8.1",
     "react-error-boundary": "1.2.3",
     "react-loadable": "^5.5.0"
   },
@@ -28,11 +28,6 @@
     "dev": "docz dev --port 3001",
     "format": "prettier --write \"**/*.+(js|json|css)\"",
     "validate": "cross-env CI=true npm-run-all --parallel test build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run build -s"
-    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,7 +48,7 @@
     "normalize.css": "8.0.0",
     "npm-run-all": "4.1.3",
     "prettier": "1.14.3",
-    "react-scripts": "2.1.1",
-    "react-testing-library": "5.3.0"
+    "react-scripts": "^2.1.3",
+    "react-testing-library": "^5.5.3"
   }
 }
